<resources>
    <string name="app_name">Event Search</string>
    <string name="tab_text_1">EVENT</string>
    <string name="tab_text_2">ARTIST</string>
    <string name="tab_text_3">VENUE</string>
    <string name="tab_text_4">UPCOMING</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="ticketMaster"><u>Ticketmaster</u></string>

    <string name="seatMap"><u>View Here</u></string>


    <string-array name="categ">
        <item>All</item>
        <item>Music</item>
        <item>Sports</item>
        <item>Arts &amp; Theatre</item>
        <item>Film</item>
        <item>Miscellaneous</item>
    </string-array>

    <string-array name="mile">
        <item>Miles</item>
        <item>Kilometers</item>
    </string-array>

    <string-array name="sortItem">
        <item>Default</item>
        <item>Event Name</item>
        <item>Time</item>
        <item>Artist</item>
        <item>Type</item>
    </string-array>

    <string-array name="sortOrder">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

    <string name="title_activity_detail_four">DetailFour</string>
    <string name="title_activity_maps">Map</string>
</resources>
